# extractosBancarios

./: .gitignore  README.md  app.py  app_utils.py  custom_exceptions.py  gcs_utils.py  pyproject.toml  requirements.txt
database/: download_models.py
engine/: engine_utils.py  model.py  tagger.py  trainer.py  utils.py
src/: __init__.py  custom_exceptions.py  main.py  src_utils.py  widgets.py
src/database/: __init__.py  download.py  upload.py
src/engine/: __init__.py  cleaner_agent.py  engine_utils.py  model_wrapper.py  tagger.py  trainer.py  uploader.py
src/views/: __init__.py  erretres.py  general.py  home.py  ibecosol.py  personalized.py
