[project]
name = "extractosbancarios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
